2013-03-20  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/storage.hh,khmer/_khmermodule.cc,lib/{readtable,read_parsers}.hh:
    remove unused storage.hh

2014-03-19  Qingpeng Zhang <qingpeng@msu.edu>

    * hashbits.cc: fix a bug of 'Division or modulo by zero' described in #182
    * test_scripts.py: add test code for count-overlap.py
    * count-overlap.py: (fix a bug because of a typo and hashsize was replaced by min_hashsize)
    * count-overlap.py: needs hashbits table generated by load-graph.py. 
    This information is added to the "usage:" line.
    * count-overlap.py: fix minor PyLint issues

2014-03-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Update bundled zlib version to 1.2.8 from 1.2.3. Changes of note:
    "Wholesale replacement of gz* functions with faster versions"
    "Added LFS (Large File Summit) support for 64-bit file offsets"
    "Fix serious but very rare decompression bug"

2014-03-19  Titus Brown  <t@idyll.org>

    * Makefile: update documentation on targets at top; clean autopep8 output.
    * test_counting_single.py: fixed pep8 violations in spacing
    * test_scripts.py: eliminate popenscript in favor of proper SystemExit
	handling in runscript; fix pep8 violations.

2014-03-17  Ram RS  <ramrs@nyu.edu>

    * extract-partitions.py: pylint warnings addressed
    * test_scripts.py: tests added to cover extract-partitions completely

2014-03-16  Ram RS  <ramrs@nyu.edu>

	* Project email in copyright headers updated

2014-03-13  Ram RS  <ramrs@nyu.edu>

    * Bug fix: tests.test_normalize_by_median_no_bigcount() now runs within
    temp directory

2014-03-11  Michael R. Crusoe  <mcrusoe@athyra>

    * lib/read_parsers.hh: fix for Coverity CID 1054789: Uninitialized scalar
    field

2014-03-03  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/trace_logger.{cc,hh}: fix for Coverity CID 1063852: Uninitialized
    scalar field (UNINIT_CTOR) 
    * lib/node.cc: fix for Coverity CID 1173035:  Uninitialized scalar field
    (UNINIT_CTOR)